Rewriting on a keycloak-admin-client library.